# tauriKargo

./: .gitignore  README.md
.github/workflows/: makeReleaseZip.yml  release.yml  rust.yml  sign.yml
examples/test-api-file-typescript/: index.html
examples/test-api-file-typescript/scripts/: worker.ts
examples/test-api-run/: index.html  index.js
site/: api-doc.json  index.html
src-tauri/: Cargo.toml  tauri.ci.json  tauri.conf.json
src-tauri/assets/: explorer.ts  index.html  index.ts  lanceur-test.ts  launcher.ts  old_index.html  package-lock.json  package.json  tools.ts
src-tauri/assets/test/: test.ts
src-tauri/icons/: icon.icns
src-tauri/src/: api-doc.json  main.rs
src-tauri/src/assets/: explorer.html  index.html
