[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]


tower-http = { version = "0.5", features = ["fs"] }
anyhow = "1"
open = "5"
# transpilation TS/TSX (remplace swc_core)
deno_ast = { version = "0.46", features = ["transpiling"] }
once_cell = "1"
dashmap = "6"
mime_guess = "2"
tiny_http = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.2", features = [ "fs-all", "shell-all", "path-all", "dialog-open", "devtools", "global-shortcut"] }
zip = "0.6.6"
walkdir = "2.5.0"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
http-body-util = "0.1"
url = "2"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
